# ksproject-gui

./: .gitignore  pyproject.toml
ksproject_gui_backup/: __init__.py  app.py  app_hotreload.py
ksproject_gui_backup/Model/: application_layer_model.py  base_model.py  entrypoint_screen.py
ksproject_gui_backup/Utility/: observer.py
ksproject_gui_backup/View/: base_screen.kv  base_screen.py  screens.py
ksproject_gui_backup/View/EntrypointScreen/: entrypoint_screen.kv  entrypoint_screen.py
ksproject_gui_backup/View/components/FileUploader/: __init__.py
ksproject_gui_backup/View/components/ImagePreview/: __init__.py
ksproject_gui_backup/View/components/PreviewPane/: __init__.py  previewpane.kv
ksproject_gui_backup/View/components/RoundedBoxLayout/: __init__.py  roundedboxlayout.py
ksproject_gui_backup/libs/: fetch_permissions.py
src/ksproject_gui/: app.py  app_hotreload.py  registers.py
src/ksproject_gui/View/: screens.py
src/ksproject_gui/instructions/: svginstruction.py
src/ksproject_gui/libs/: _datamodel.py  datamodel.py  fetch_permissions.py
src/ksproject_gui/uix/: conditional_view.py  imagepreview.kv  previewpane.kv  roundedboxlayout.kv
src/ksproject_studio/: __init__.py  app.py  app_hotreload.py
src/ksproject_studio/View/: screens.py
src/ksproject_studio/libs/: _datamodel.py  color_picker.py  datamodel.py  datamodel.py.bak
src/ksproject_studio/models/: _datamodel.py  datamodel.py
src/ksproject_studio/uix/: conditional_view.py  fileuploader.kv  fileuploader.py  previewpane.py
(+73 files in other folders)
