[project]
name = "ksproject-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "psychowasp", email = "psychowaspx@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "carbonkivy",
    "kaki>=0.1.9",
    "pyobjc>=12.2",
    "thorvg-cython>=0.0.5.post1",
]

[project.scripts]
ksproject-gui = "ksproject_gui:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
carbonkivy = { git = "https://github.com/CarbonKivy/CarbonKivy" }
